--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "repository": "git@github.com:mario-jerkovic/semantic-release-repro.git",
   "author": "mario.jerkovic <mario.jerkovic@rimac-automobili.com>",
-  "license": "MIT",
+  "license": "UNLICENCED",
   "packageManager": "yarn@3.1.1",
   "scripts": {
     "release": "semantic-release --dry-run"
